Problema al calcular la cantidad de dias entre fechas fixeado